--- a/complete/src/main/resources/templates/about.html
+++ b/complete/src/main/resources/templates/about.html
@@ -19,7 +19,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/contact">Contact</a>
@@ -34,7 +34,7 @@
   </div>
 </nav>
 <div class="media">
-  <img src="..." class="align-self-start mr-3" alt="...">
+  <img src="aboutus.jpg" class="align-self-start mr-3" alt="My picture">
   <div class="media-body">
     <h5 class="mt-0">Top-aligned media</h5>
     <p>My name is Ashlyn Averett. I am a senior at Columbus State. I am a Computer Science major in the Applied Computing Track. I am also a dance minor.</p>
@@ -42,7 +42,6 @@
     <a href="https://www.valleyrescuemission.org/">View Webpage here.</a>
   </div>
 </div>
-    <h1>Hello, world!</h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
