--- a/complete/src/main/resources/templates/contact.html
+++ b/complete/src/main/resources/templates/contact.html
@@ -38,38 +38,17 @@
   <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
   <hr class="my-4">
   <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-  <form>
+  <form id ="contact-form">
   <div class="form-group">
     <label for="exampleFormControlInput1">Email address</label>
-    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-  </div>
-  <div class="form-group">
-    <label for="exampleFormControlSelect1">Example select</label>
-    <select class="form-control" id="exampleFormControlSelect1">
-      <option>1</option>
-      <option>2</option>
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
-    </select>
-  </div>
-  <div class="form-group">
-    <label for="exampleFormControlSelect2">Example multiple select</label>
-    <select multiple class="form-control" id="exampleFormControlSelect2">
-      <option>1</option>
-      <option>2</option>
-      <option>3</option>
-      <option>4</option>
-      <option>5</option>
-    </select>
+    <input name="email" type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
   </div>
   <div class="form-group">
     <label for="exampleFormControlTextarea1">Example textarea</label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    <textarea input name = "message" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
   </div>
+  <a type="submit" class="btn btn-primary btn-lg" href="#" role="button">Submit</a>
 </form>  
-<a id="contact-me-submit" class="btn btn-primary btn-lg" href="#" role="button">Submit</a>
-</div>
     <h1>Contact US</h1>
 
     <!-- Optional JavaScript -->
@@ -77,5 +56,21 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!---Javascript for the submission of the form using Jquery and Ajax-->
+    <script>
+        $(#"contact-form").submit(fuction(event){
+            event.preventDefault();
+            var formData = {"email":exampleFormControlInput1.value,"massage":exampleFormControlTextarea1};
+            $.ajax(
+                type:'POST',
+                url: '/contact',
+                data: JSON.strigify(formData),
+                contentType: "json",
+                succes: function(data){
+                    console.log(data);
+                }
+            )
+        })
   </body>
 </html>
