--- a/complete/src/main/resources/templates/about.html
+++ b/complete/src/main/resources/templates/about.html
@@ -33,6 +33,7 @@
     </ul>
   </div>
 </nav>
+<div id="about-me" class="jumbotron">
 <div class="media">
   <img src="aboutus.jpg" class="align-self-start mr-3" alt="My picture">
   <div class="media-body">
@@ -41,6 +42,7 @@
     <p>A non-profit organization that means alot to me is Damascus Way, which is apart of Valley Rescue Mission. </p>
     <a href="https://www.valleyrescuemission.org/">View Webpage here.</a>
   </div>
+</div>
 </div>
 
     <!-- Optional JavaScript -->
