--- a/complete/src/main/resources/templates/contact.html
+++ b/complete/src/main/resources/templates/contact.html
@@ -28,16 +28,15 @@
         <a class="nav-link" href="/about">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+        <a class="nav-link disabled" href="/" tabindex="-1" aria-disabled="true">Disabled</a>
       </li>
     </ul>
   </div>
 </nav>
 <div class="jumbotron">
-  <h1 class="display-4">Contact us</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+  <h1 class="display-4">Contact Me</h1>
+  <p class="lead">Fill out the form below to contact me.</p>
   <hr class="my-4">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
   <form id ="contact-form">
   <div class="form-group">
     <label for="exampleFormControlInput1">Email address</label>
@@ -45,10 +44,11 @@
   </div>
   <div class="form-group">
     <label for="exampleFormControlTextarea1">Example textarea</label>
-    <textarea input name = "message" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    <textarea name = "message" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
   </div>
-  <a type="submit" class="btn btn-primary btn-lg" href="#" role="button">Submit</a>
-</form>  
+  <button type="submit" class="btn btn-primary btn-lg" >Submit</button>
+</form> 
+</div> 
     <h1>Contact US</h1>
 
     <!-- Optional JavaScript -->
@@ -58,19 +58,25 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!---Javascript for the submission of the form using Jquery and Ajax-->
-    <script>
-        $(#"contact-form").submit(fuction(event){
+   <script>
+        //form handler
+        $("#contact-form").submit(function(event){
+            //stop form from submitting as it normally would
             event.preventDefault();
-            var formData = {"email":exampleFormControlInput1.value,"massage":exampleFormControlTextarea1};
-            $.ajax(
-                type:'POST',
+            //default way to send data is as a JSON {"var":"value","var":"value"....}
+            //get Values from the form above and assign to variable names
+            var formData = {"email": exampleFormControlInput1.value, "message": exampleFormControlTextarea1.value};
+            $.ajax({
+                type: 'POST',
                 url: '/contact',
-                data: JSON.strigify(formData),
-                contentType: "json",
-                succes: function(data){
+                data: JSON.stringify(formData),
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                success: function(data){
                     console.log(data);
                 }
-            )
-        })
+            });
+        });
+    </script>  
   </body>
 </html>
