--- a/complete/src/main/resources/templates/blog.html
+++ b/complete/src/main/resources/templates/blog.html
@@ -45,6 +45,13 @@
     <button type="submit" class="btn btn-primary btn-lg" >Submit</button>
 </form> 
 <div id = "blogAddition">
+<ul class="blogPost">
+  <li class="list-group-item">Cras justo odio</li>
+  <li class="list-group-item">Dapibus ac facilisis in</li>
+  <li class="list-group-item">Morbi leo risus</li>
+  <li class="list-group-item">Porta ac consectetur ac</li>
+  <li class="list-group-item">Vestibulum at eros</li>
+</ul>
 </div>
 </div> 
 
