--- a/complete/src/main/resources/templates/greeting.html
+++ b/complete/src/main/resources/templates/greeting.html
@@ -40,6 +40,8 @@
   <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
   <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
 </div>
+<div id-"nasaAPOD">  
+</div>
 
 
     <!-- Optional JavaScript -->
@@ -47,5 +49,24 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+     <script>
+     // A $( document ).ready() block.
+$( document ).ready(function() {
+    console.log( "ready!" );
+    $.ajax({
+                type: 'GET',
+                url: 'https://api.nasa.gov/planetary/apod?api_key=biAByDf8RSNcDIm12b86KrZtfEZEcVXsWT0O7fVd',
+                dataType:'json',
+               success: function(data){
+                    $('#nasaAPOD').css('background',"url('"+datat.url+"')";
+                },
+                error: function(e){
+                    console.log(e);
+                    $('#ajaxResponse').html('<span>Sorry we couldnt complete your request</span>');
+                }
+            });
+});
+     </script>
   </body>
 </html>
