--- a/complete/src/main/resources/static/css/styles.css
+++ b/complete/src/main/resources/static/css/styles.css
@@ -1,3 +1,13 @@
 body{
     color:blue;
 }
+#about-me{
+    background-image: url(/img/aboutus.jpg);
+    background-size: 50% 50%;
+    background-repeat: no-repeat;
+    font-size: 3em;
+    background-position: top left;
+}
+.lead{
+    font-size: 1.5em;
+}
