--- a/complete/src/main/resources/templates/about.html
+++ b/complete/src/main/resources/templates/about.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/styles.css}"  />
 
     <title>Hello, world!</title>
   </head>
@@ -34,15 +35,13 @@
   </div>
 </nav>
 <div id="about-me" class="jumbotron">
-<div class="media">
-  <img src="aboutus.jpg" class="align-self-start mr-3" alt="My picture">
-  <div class="media-body">
-    <h5 class="mt-0">Top-aligned media</h5>
-    <p>My name is Ashlyn Averett. I am a senior at Columbus State. I am a Computer Science major in the Applied Computing Track. I am also a dance minor.</p>
-    <p>A non-profit organization that means alot to me is Damascus Way, which is apart of Valley Rescue Mission. </p>
-    <a href="https://www.valleyrescuemission.org/">View Webpage here.</a>
-  </div>
-</div>
+    
+        <h1 class="display-4"></h1>
+        <p class="lead">About Me </p>
+        <p>My name is Ashlyn Averett. I am a senior at Columbus State. I am a Computer Science major in the Applied Computing Track. I am also a dance minor.</p>
+        <p>A non-profit organization that means alot to me is Damascus Way, which is apart of Valley Rescue Mission. </p>
+        <a href="https://www.valleyrescuemission.org/">View Webpage here.</a>
+
 </div>
 
     <!-- Optional JavaScript -->
