--- a/complete/src/main/resources/templates/blog.html
+++ b/complete/src/main/resources/templates/blog.html
@@ -37,7 +37,7 @@
   <h1 class="display-4">Blog</h1>
   <p class="lead">Add a new blog post</p>
   <hr class="my-4">
-  <form id ="contact-form">
+  <form id ="blog-form">
     <div class="form-group">
     <label for="exampleFormControlTextarea1">Example textarea</label>
     <textarea name ="message" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
@@ -45,7 +45,9 @@
     <button type="submit" class="btn btn-primary btn-lg" >Submit</button>
 </form> 
 <div id = "blogAddition">
-<ul id ="blogPost" class ="list-group">
+</div>
+<div id="blogPost">
+<ul id ="allPost" class ="list-group">
 </ul>
 </div>
 </div> 
@@ -59,7 +61,7 @@
     <!---Javascript for the submission of the form using Jquery and Ajax-->
    <script>
         //form handler
-        $("#contact-form").submit(function(event){
+        $("#blog-form").submit(function(event){
             //stop form from submitting as it normally would
             event.preventDefault();
             //default way to send data is as a JSON {"var":"value","var":"value"....}
@@ -72,16 +74,20 @@
                 contentType: "application/json; charset=utf-8",
                 success: function(data){
                    $('#blogAddition').html(data);
-                    var addItem = $('#exampleFormControlTextarea1').val();   
-                    $('#blogPost').append(`<li class="list-group-item">${addItem}</li>`);
-                    $("input:text").val("");
+                   addfunction();
+                   console.log("run add")  
                     return false;
                 },
                 error: function(e){
                     console.log(e);
                     $('#blogAddition').html('<span>Sorry we couldnt complete your request</span>');
-                }
+                },
             });
+        function addfunction(){
+            var addItem = $('#exampleFormControlTextarea1').val();
+            $('#allPost').append(`<li class="list-group-item">${addItem}</li>`);
+            $("input:text").val("");
+        }
                 
         });
     </script>  
