--- a/complete/src/main/resources/templates/blog.html
+++ b/complete/src/main/resources/templates/blog.html
@@ -86,7 +86,7 @@
         function addfunction(){
             var addItem = $('#exampleFormControlTextarea1').val();
             $('#allPost').append(`<li class="list-group-item">${addItem}</li>`);
-            $("input:text").val("");
+            $('#exampleFormControlTextarea1').val("");
         }
                 
         });
