--- a/complete/src/main/resources/templates/about.html
+++ b/complete/src/main/resources/templates/about.html
@@ -34,10 +34,11 @@
     </ul>
   </div>
 </nav>
+<div id="about-me-pic">
+</div>
 <div id="about-me" class="jumbotron">
     
-        <h1 class="display-4"></h1>
-        <p class="lead">About Me </p>
+        <h1 class="display-4">About Me</h1>
         <p>My name is Ashlyn Averett. I am a senior at Columbus State. I am a Computer Science major in the Applied Computing Track. I am also a dance minor.</p>
         <p>A non-profit organization that means alot to me is Damascus Way, which is apart of Valley Rescue Mission. </p>
         <a href="https://www.valleyrescuemission.org/">View Webpage here.</a>
